test add document to cloud firestore

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,10 @@
       </kendo-badge-container>
       <span class="k-appbar-separator"></span>
   </kendo-appbar-section-->
+  <kendo-appbar-section>
+    <button kendoButton style="font-size: 2em; color: Tomato;" iconClass="fas fa-plus-square" (click)="onButtonClick()">I lost my pet</button>
+    <!--i class="fas fa-sign-in-alt"></i-->
+  </kendo-appbar-section>
 <kendo-appbar-section>
   <button kendoButton style="font-size: 2em; color: Tomato;" iconClass="fas fa-sign-in-alt">Sign-In</button>
   <!--i class="fas fa-sign-in-alt"></i-->
