add appBar component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,62 +1,1 @@
-<kendo-appbar [position]="'top'">
-  <kendo-appbar-section>
-      <button class="k-button k-button-clear">
-          <kendo-icon style="font-size: 2em; color: Tomato;" [name]="'menu'"></kendo-icon>
-      </button>
-  </kendo-appbar-section>
-
-  <kendo-appbar-section>
-      <h1 class="title">Pet Aid your app for helping pets</h1>
-  </kendo-appbar-section>
-
-  <kendo-appbar-spacer></kendo-appbar-spacer>
-
-  <!--kendo-appbar-section>
-      <ul>
-          <li><span>What's New</span></li>
-          <li><span>About</span></li>
-          <li><span>Contacts</span></li>
-      </ul>
-  </kendo-appbar-section>
-
-  <kendo-appbar-spacer></kendo-appbar-spacer>
-
-  <kendo-appbar-section class="actions">
-      <kendo-badge-container>
-          <button class="k-button k-button-clear">
-              <kendo-icon [name]="'bell'"></kendo-icon>
-          </button>
-          <kendo-badge [shape]="'dot'" [themeColor]="'warning'" [size]="'small'" [position]="'inside'"></kendo-badge>
-      </kendo-badge-container>
-      <span class="k-appbar-separator"></span>
-  </kendo-appbar-section-->
-  <kendo-appbar-section>
-    <button kendoButton style="font-size: 2em; color: Tomato;" iconClass="fas fa-plus-square" (click)="onButtonClick()">I lost my pet</button>
-    <!--i class="fas fa-sign-in-alt"></i-->
-  </kendo-appbar-section>
-<kendo-appbar-section>
-  <button kendoButton style="font-size: 2em; color: Tomato;" iconClass="fas fa-sign-in-alt">Sign-In</button>
-  <!--i class="fas fa-sign-in-alt"></i-->
-</kendo-appbar-section>
-  <!--kendo-appbar-section>
-      <kendo-avatar [imageSrc]="kendokaAvatar" [shape]="'circle'" [width]="'26px'" [height]="'26px'"></kendo-avatar>
-  </kendo-appbar-section-->
-</kendo-appbar>
-
-
-<div class="w3-row">
-    <div *ngFor="let item of item$ | async" class="w3-col s6 m4 l2"
-    (click)="setSelectedAd(annonce)" onclick="document.getElementById('id-ad-details').style.display='block'">
-      <div class="w3-container w3-margin-bottom	">
-        <div class="w3-hover-shadow w3-round-xlarge" style="cursor:pointer;">
-          <img src="assets/avatar3.png" alt="annonce" style="height:150px; object-fit: cover; width:100%; border-radius:5%;">
-          <!--img src={{annonce.imgs[0]}} alt="annonce1" style="height:150px;object-fit: cover;width:100%;border-radius:5%;"-->
-          <div class="w3-container" style="height:75px;" >
-            <p><span style="font-weight: bold;">150 DT</span>
-              {{item.name}}</p>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </div>
+<app-app-bar></app-app-bar>
