--- a/src/app/components/forms/pet/pet.component.html
+++ b/src/app/components/forms/pet/pet.component.html
@@ -1,101 +1,40 @@
 <kendo-dialog title="Please confirm" *ngIf="toggle" (close)="close()" [height]="550" [width]="400">
 
-    <kendo-stepper #stepper [steps]="steps" stepType="full" [(currentStep)]="currentStep"> </kendo-stepper>
+  <kendo-stepper #stepper [steps]="steps" stepType="indicator" [(currentStep)]="currentStep"> </kendo-stepper>
+
+  <form class="k-form" [formGroup]="petForm">
+
+
+
     
-    <form class="k-form" [formGroup]="petForm" (ngSubmit)="onSubmit()">
 
-        <fieldset class="k-form-fieldset">
-            <legend class="k-form-legend">Pet Details</legend>
+    <!--fieldset class="k-form-fieldset"-->
+    <!--legend class="k-form-legend">Pet Details</legend-->
+    <app-pet-details1 *ngIf="currentStep === 0" [petDetails1]="currentGroup"> </app-pet-details1>
 
-            <div class="wrap">
-                <kendo-formfield class="left-control">
-                    <kendo-label [for]="Name" text="Name"></kendo-label>
-                    <input formControlName="name" kendoTextBox #Name required />
+    <app-pet-details2 *ngIf="currentStep === 1" [petDetails2]="currentGroup"> </app-pet-details2>
 
-                    <kendo-formerror>required</kendo-formerror>
-                </kendo-formfield>
+    <app-pet-details3 *ngIf="currentStep === 2" [petDetails3]="currentGroup"> </app-pet-details3>
 
+    <span class="k-form-separator"></span>
 
-                <kendo-formfield>
-                    <kendo-label [for]="Species" text="Species"></kendo-label>
-                    <input formControlName="species" kendoTextBox #Species required />
+    <div class="k-form-buttons k-buttons-end">
+      <span class="page">Step {{ currentStep + 1 }} of 3</span>
+      <div>
+        <button class="k-button prev" *ngIf="currentStep !== 0" (click)="prev()">Previous</button>
+        <button class="k-button k-primary" (click)="next()" *ngIf="currentStep !== 2">Next</button>
+        <button class="k-button k-primary" type="button" (click)="submit()" *ngIf="currentStep === 2">Submit</button>
+      </div>
+    </div>
 
-                    <kendo-formerror>required</kendo-formerror>
-                </kendo-formfield>
-            </div>
-
-            <div class="wrap">
-                <kendo-formfield class="left-control" orientation="horizontal" showHints="initial">
-                    <label class="k-label">Gender</label>
-
-                    <ul class="k-radio-list k-list-horizontal">
-                        <li class="k-radio-item">
-                            <input type="radio" #male value="male" kendoRadioButton formControlName="gender" />
-                            <kendo-label class="k-radio-label" [for]="male" text="Male"></kendo-label>
-                        </li>
-
-                        <li class="k-radio-item">
-                            <input type="radio" #female value="female" kendoRadioButton formControlName="gender" />
-                            <kendo-label class="k-radio-label" [for]="female" text="Female"></kendo-label>
-                        </li>
-                    </ul>
-
-                    <kendo-formerror>required</kendo-formerror>
-                </kendo-formfield>
-
-                <kendo-formfield>
-                    <kendo-label [for]="Breed" text="Breed"></kendo-label>
-                    <input formControlName="breed" kendoTextBox #Breed required />
-
-                    <kendo-formerror>required</kendo-formerror>
-                </kendo-formfield>
-
-            </div>
-
-            <div class="wrap">
-                <kendo-formfield class="left-control">
-                    <kendo-label [for]="Color" text="Dominant Color"></kendo-label>
-                    <!--input formControlName="color" kendoTextBox #Color required /-->
-                    <kendo-colorpicker #Color formControlName="color" view="palette"
-                        [paletteSettings]="{ palette: 'austin' }" required></kendo-colorpicker>
-                    <kendo-formerror>required</kendo-formerror>
-                </kendo-formfield>
-
-                <kendo-formfield>
-                    <kendo-label [for]="Size" text="Size"></kendo-label>
-                    <input formControlName="size" kendoTextBox #Size required />
-
-                    <kendo-formerror>required</kendo-formerror>
-                </kendo-formfield>
-            </div>
-
-            <div class="wrap">
-                <kendo-formfield class="left-control">
-                    <kendo-label [for]="Weight" text="Weight"></kendo-label>
-                    <kendo-numerictextbox #Weight formControlName="weight" [min]="0" [max]="80" required>
-                    </kendo-numerictextbox>
-                    <kendo-formerror>required</kendo-formerror>
-                </kendo-formfield>
-
-                <kendo-formfield>
-                    <kendo-label [for]="Age" text="Age"></kendo-label>
-                    <kendo-numerictextbox #Age formControlName="age" [min]="0" [max]="100" required>
-                    </kendo-numerictextbox>
-                    <kendo-formerror *ngIf="petForm.controls.age.errors?.required">required</kendo-formerror>
-                    <kendo-formerror *ngIf="petForm.controls.age.errors?.max">Not a valid age</kendo-formerror>
-                </kendo-formfield>
-            </div>
-
-
-
-            <div class="k-form-buttons">
+    <!--div class="k-form-buttons">
                 <button class="k-button" type="reset">Clear</button>
                 <button class="k-button k-primary" type="submit" [disabled]="!petForm.valid">Submit</button>
-            </div>
-        </fieldset>
-    </form>
-    <!-- Just for debugging purpose -->
-    <!--div>
+            </div-->
+    <!--/fieldset-->
+  </form>
+  <!-- Just for debugging purpose -->
+  <!--div>
   <p>
     Form Value: {{ petForm.value | json }}
   </p>
