--- a/src/app/components/forms/pet/pet-details1/pet-details1.component.html
+++ b/src/app/components/forms/pet/pet-details1/pet-details1.component.html
@@ -13,20 +13,32 @@
         <input formControlName="species" kendoTextBox #Species required />
 
         <kendo-formerror>required</kendo-formerror>
+    </kendo-formfield>  
+
+    <kendo-formfield class="left-control" orientation="horizontal" showHints="initial">
+        <label class="k-label">Gender</label>
+
+        <ul class="k-radio-list k-list-horizontal">
+            <li class="k-radio-item">
+                <input type="radio" #male value="male" kendoRadioButton formControlName="gender" />
+                <kendo-label class="k-radio-label" [for]="male" text="Male"></kendo-label>
+            </li>
+
+            <li class="k-radio-item">
+                <input type="radio" #female value="female" kendoRadioButton formControlName="gender" />
+                <kendo-label class="k-radio-label" [for]="female" text="Female"></kendo-label>
+            </li>
+        </ul>
+
+        <kendo-formerror>required</kendo-formerror>
     </kendo-formfield>
 
     <kendo-formfield>
-        <kendo-label [for]="avatar" [optional]="true" text="Avatar"></kendo-label>
-        <kendo-upload
-            #avatar
-            formControlName="avatar"
-            [saveUrl]="uploadSaveUrl"
-            [removeUrl]="uploadRemoveUrl"
-            [restrictions]="restrictions"
-        >
-        </kendo-upload>
+        <kendo-label [for]="Breed" text="Breed"></kendo-label>
+        <input formControlName="breed" kendoTextBox #Breed required />
 
-        <kendo-formhint>Allowed extensions are jpg, jpeg or png</kendo-formhint>
-    </kendo-formfield>    
+        <kendo-formerror>required</kendo-formerror>
+    </kendo-formfield>
+
 </div>
 </ng-container>
