--- a/src/app/components/main-grid/main-grid.component.html
+++ b/src/app/components/main-grid/main-grid.component.html
@@ -1,6 +1,26 @@
-<kendo-grid [data]="gridData" [height]="410">
+<!--kendo-grid [data]="gridData" [height]="410">
     <kendo-grid-column
       *ngFor="let col of columns"
       [field]="col.field"
     ></kendo-grid-column>
-  </kendo-grid>
+  </kendo-grid-->
+<kendo-grid [data]="view | async" [height]="470" (edit)="editHandler($event)" (cancel)="cancelHandler($event)"
+  (save)="saveHandler($event)" (remove)="removeHandler($event)" (add)="addHandler($event)">
+  <!--ng-template kendoGridToolbarTemplate>
+    <button kendoGridAddCommand>Add new</button>
+  </ng-template-->
+  <kendo-grid-column field="age" editor="numeric" title="age"></kendo-grid-column>
+  <kendo-grid-column field="breed" title="breed"></kendo-grid-column>
+  <kendo-grid-column field="name" title="name"></kendo-grid-column>
+  <!--kendo-grid-column field="Discontinued" editor="boolean" title="Discontinued"></kendo-grid-column>
+  <kendo-grid-column field="UnitsInStock" editor="numeric" title="Units In Stock"></kendo-grid-column-->
+  <!--kendo-grid-command-column title="command" width="220">
+    <ng-template kendoGridCellTemplate let-isNew="isNew">
+      <button kendoGridEditCommand [primary]="true">Edit</button>
+      <button kendoGridRemoveCommand>Remove</button>
+      <button kendoGridSaveCommand [disabled]="formGroup?.invalid">{{ isNew ? 'Add' : 'Update' }}</button>
+      <button kendoGridCancelCommand>{{ isNew ? 'Discard changes' : 'Cancel' }}</button>
+    </ng-template>
+  </kendo-grid-command-column-->
+</kendo-grid>
+<button kendoButton (click)="resetData()">Reset data</button>
