--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-app-bar></app-app-bar>
-<app-main-grid></app-main-grid>
+<!--app-app-bar></app-app-bar>
+<app-main-grid></app-main-grid-->
+<app-header></app-header>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
