--- a/src/app/book-list/book-list.component.html
+++ b/src/app/book-list/book-list.component.html
@@ -1,16 +1,24 @@
 <div class="row">
     <div class="col-xs-12">
         <h2>Vos livres</h2>
-        <div class="list-group">
-            <button class="list-group-item" *ngFor="let book of books; let i = index" (click)="onViewBook(i)">
+        <ul class="list-group  list-group-numbered">
+            <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-start" *ngFor="let book of books; let i = index" (click)="onViewBook(i)">
+                <div class="ms-2 me-auto">
+                    <div class="fw-bold">{{book.title}}</div>
+                    {{book.author}}
+                  </div>
+                  <button type="button" class="btn btn-secondary btn-sm" (click)="onDeleteBook(book)">
+                    <i class="fas fa-minus-square"></i>
+                </button>
+                  <!--span class="badge bg-primary rounded-pill">14</span>                
                 <h3 class="List-group-item-heading">{{book.title}}
-                    <button class="btn btn-default pull-right" (click)="onDeleteBook(book)">
-                        <span class="glyphicon glyphicon-minus"></span>
+                    <button class="btn" (click)="onDeleteBook(book)">
+                        <i class="bi bi-file-minus"></i>
                     </button>
                 </h3>
-                <p class="list-group-item-text">{{book.author}}</p>
-            </button>
-        </div>
+                <p class="list-group-item-text">{{book.author}}</p-->
+            </li>
+        </ul>
         <button class="btn btn-primary" (click)="onNewBook()">Nouveau Livre</button>
     </div>
 </div>
