--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,19 +1,19 @@
-<nav class="navbar navbar-default">
+<nav class="navbar sticky-top  navbar-expand-lg  navbar-toggleable-sm navbar-light bg-light">
     <div class="container-fluid">
-<ul class="nav navbar-nav">
-    <li routerLinkActive="active">
-        <a routerLink="books">Livres</a>
+<ul class="navbar-nav">
+    <li routerLinkActive="active" class="nav-item">
+        <a class="navbar-brand" routerLink="books">Livres</a>
     </li>
 </ul>
-<ul class="nav navbar-nav navbar-right">
-    <li routerLinkActive="active" *ngIf="!isAuth">
-        <a routerLink="auth/signup">Créer un compte</a>
+<ul class="navbar-nav d-flex flex-row ml-auto">
+    <li class="p-2 nav-item" routerLinkActive="active" *ngIf="!isAuth">
+        <a class="nav-link" routerLink="auth/signup">Créer un compte</a>
     </li>
-    <li routerLinkActive="active" *ngIf="!isAuth">
-        <a routerLink="auth/signin">Connexion</a>
+    <li class=" p-2 nav-item" routerLinkActive="active" *ngIf="!isAuth">
+        <a class="nav-link" routerLink="auth/signin">Connexion</a>
     </li>
-    <li *ngIf="isAuth" style="cursor:pointer">
-        <a (click)="onSignOut()">Déconnexion</a>
+    <li class="p-2 nav-item" *ngIf="isAuth" style="cursor:pointer">
+        <a class="nav-link" (click)="onSignOut()">Déconnexion</a>
     </li>
 </ul>
     </div>
