--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,5 +16,16 @@
         <a class="nav-link" (click)="onSignOut()">Déconnexion</a>
     </li>
 </ul>
+
+
+<div *ngIf="auth.user | async as user; else showLogin">
+    <h1>Hello {{ user.displayName }}!</h1>
+    <button (click)="logout()">Logout</button>
+  </div>
+  <ng-template #showLogin>
+    <p>Please login.</p>
+    <button (click)="login()">Login with Google</button>
+  </ng-template>
+  
     </div>
 </nav>
