--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!--app-app-bar></app-app-bar>
-<app-main-grid></app-main-grid-->
+<app-app-bar></app-app-bar>
+<!--app-main-grid></app-main-grid-->
 <!--app-header></app-header>
 <div class="container">
     <router-outlet></router-outlet>
