--- a/src/app/components/verify-email/verify-email.component.html
+++ b/src/app/components/verify-email/verify-email.component.html
@@ -1,11 +1,11 @@
 <div class="displayTable">
     <div class="displayTableCell">
   
-      <div class="px-logo">
+      <!--div class="px-logo">
         <a href="https://www.positronx.io" target="_blank">
           <img src="https://www.positronx.io/wp-content/themes/positronx/img/logo-positronx-white.svg" alt="positronX.io - Learn Full Stack Development">
         </a>
-      </div>
+      </div-->
   
       <div class="authBlock">
         <h3>Thank You for Registering</h3>
@@ -26,7 +26,7 @@
       </div>
   
       <div class="redirectToLogin">
-        <span>Go back to?<span class="redirect" routerLink="/sign-in"> Sign in</span></span>
+        <span>Go back to?<span class="redirect" routerLink="home"> Home</span></span>
       </div>
   
     </div>
