--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,25 @@
-<p>home works!</p>
+<!--kendo-grid [data]="gridData" [height]="410">
+    <kendo-grid-column
+      *ngFor="let col of columns"
+      [field]="col.field"
+    ></kendo-grid-column>
+  </kendo-grid-->
+  <kendo-grid [data]="view | async" [height]="470" (edit)="editHandler($event)" (cancel)="cancelHandler($event)"
+  (save)="saveHandler($event)" (remove)="removeHandler($event)" (add)="addHandler($event)">
+  <!--ng-template kendoGridToolbarTemplate>
+    <button kendoGridAddCommand>Add new</button>
+  </ng-template-->
+  <kendo-grid-column field="title" title="title"></kendo-grid-column>
+  <kendo-grid-column field="author" title="author"></kendo-grid-column>
+  <!--kendo-grid-column field="Discontinued" editor="boolean" title="Discontinued"></kendo-grid-column>
+  <kendo-grid-column field="UnitsInStock" editor="numeric" title="Units In Stock"></kendo-grid-column-->
+  <!--kendo-grid-command-column title="command" width="220">
+    <ng-template kendoGridCellTemplate let-isNew="isNew">
+      <button kendoGridEditCommand [primary]="true">Edit</button>
+      <button kendoGridRemoveCommand>Remove</button>
+      <button kendoGridSaveCommand [disabled]="formGroup?.invalid">{{ isNew ? 'Add' : 'Update' }}</button>
+      <button kendoGridCancelCommand>{{ isNew ? 'Discard changes' : 'Cancel' }}</button>
+    </ng-template>
+  </kendo-grid-command-column-->
+</kendo-grid>
+<!--button kendoButton (click)="resetData()">Reset data</button-->
