styling new user registration dialog

--- a/src/app/components/app-bar/app-bar.component.html
+++ b/src/app/components/app-bar/app-bar.component.html
@@ -26,7 +26,7 @@
     </kendo-appbar-section-->
     <app-login-popup></app-login-popup>
     <kendo-appbar-section>
-      <button kendoButton iconClass="fas fa-user-plus" class="btn btn-success"
+      <button kendoButton iconClass="fas fa-user-plus"
         (click)="openRegister()">Register</button>
     </kendo-appbar-section>
   </div>
