--- a/src/app/forms/log-in/log-in.component.html
+++ b/src/app/forms/log-in/log-in.component.html
@@ -1,48 +1,45 @@
-<div class="displayTable">
-    <div class="displayTableCell">
-  
-      <!--div class="px-logo">
+<div class="content">
+  <!--div class="px-logo">
         <a href="https://www.positronx.io" target="_blank">
           <img src="https://www.positronx.io/wp-content/themes/positronx/img/logo-positronx-white.svg" alt="positronX.io - Learn Full Stack Development">
         </a>
       </div-->
-  
-      <div class="authBlock">
-        <!--h3>Sign In</h3-->
-        <div class="formGroup">
-          <input type="text" class="formControl" placeholder="Username" #userName required>
-        </div>
-  
-        <div class="formGroup">
-          <input type="password" class="formControl" placeholder="Password" #userPassword required>
-        </div>
-  
-        <!-- Calling SignIn Api from AuthService -->
-        <div class="formGroup">
-          <input type="button" class="btn btnPrimary" value="Continue" (click)="close();authService.SignIn(userName.value, userPassword.value);">
-        </div>
-  
-        <!--div class="formGroup">
+
+    <h5>Enter your Credentials</h5>
+    <div class="formGroup">
+      <input type="text" class="formControl" placeholder="Username" #userName required>
+    </div>
+
+    <div class="formGroup">
+      <input type="password" class="formControl" placeholder="Password" #userPassword required>
+    </div>
+
+    <!-- Calling SignIn Api from AuthService -->
+    <!--div class="formGroup">
+      <input type="button" class="btn btnPrimary" value="Continue"
+        (click)="close();authService.SignIn(userName.value, userPassword.value);">
+    </div-->
+
+    <button kendoButton [primary]="true" (click)="close();authService.SignIn(userName.value, userPassword.value);">Continue</button>
+    <!--div class="formGroup">
           <span class="or"><span class="orInner">Or</span></span>
         </div-->
-  
-        <!-- Calling GoogleAuth Api from AuthService -->
-        <!--div class="formGroup">
+
+    <!-- Calling GoogleAuth Api from AuthService -->
+    <!--div class="formGroup">
           <button type="button" class="btn googleBtn" (click)="authService.GoogleAuth()">
             <i class="fab fa-google-plus-g"></i>
             Log in with Google
           </button>
         </div-->
-  
-        <!--div class="forgotPassword">
+
+    <!--div class="forgotPassword">
           <span routerLink="/forgot-password">Forgot Password?</span>
         </div>
       </div-->
-  
-      <!--div class="redirectToLogin">
+
+    <!--div class="redirectToLogin">
         <span>Don't have an account?<span class="redirect" routerLink="/register-user"> Sign Up</span></span>
       </div-->
-  
-    </div>
+
   </div>
-  
